--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
+    "offline": "serverless offline --noTimeout",
     "build": "nest build",
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:dev:local": "env-cmd -f .env nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -27,20 +31,31 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^7.1.5",
+    "@vendia/serverless-express": "^4.10.1",
+    "aws-lambda": "^1.0.7",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "helmet": "^4.2.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "typeorm": "^0.2.45",
+    "typeorm-snake-naming-strategy": "^1.0.2",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.2",
     "@nestjs/schematics": "^7.2.1",
     "@nestjs/testing": "^7.5.1",
+    "@serverless/typescript": "^3.29.0",
+    "@types/aws-lambda": "^8.10.114",
     "@types/express": "^4.17.3",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "26.0.10",
     "@types/node": "^13.13.30",
     "@types/passport-jwt": "^3.0.3",
@@ -54,6 +69,9 @@
     "jest": "26.4.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "serverless": "^3.29.0",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^12.0.4",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
